# Hexo-BotTrainer

./: .gitignore  CLAUDE.md  Cargo.toml  DENSE_CNN_MCTS_VERIFICATION.md  DENSE_CNN_PIPELINE_GUIDE.md  DENSE_CNN_RUST_MCTS_CAPABILITIES.md  HANDOFF.md  Model 1 goal.md  NOTES.md  Project.md  README.md  RELAUNCH.md  ROUTINE_PROMPT.md  Report Analysis and Consolidation.docx  Review.md  deep-research-report.md  game.md  goal.md  katagotips.md  patterns.rs
TempDocs/: HEXO_ENGINE.md  HEXO_MODEL.md  HEXO_RUNNER.md  HEXO_UTILS.md  NEW_PROJECT_STRUCTURE_PLAN.md  RUST_LAYOUT.md
analysis/: a1_throughput_bench.py  a7_autotune_bench.py  aligned_a1.json  aligned_serial.json  epoch_timeline_summary.json  epoch_timings.json  evaluator_microbench.py  evaluator_microbench_summary.json  forward_fp_bench.py  gpu_microbench.py  gpu_microbench_summary.json  mcts_aligned_diff.py  mcts_aligned_harness.py  mcts_baseline_pre_a1.json  mcts_code_review.md  mcts_equiv_harness.py  mcts_microbench.py  mcts_microbench_summary.json  mcts_post_a1_fixed.json  optimization_plan.md  p0_loadonce_microbench.py  parse_epoch_timings.py  parse_selfplay_diag.py  performance_profiling.md  phase1_logged_entropy.py  phase1_summary.json  phase2_raw_head_inference.py  phase2_summary.json  phase3_target_vs_pred.py  phase4_sim_budget.py  phase4_vram_probe.py  policy_diffuseness_investigation.md  reconstruct_epoch_timeline.py  root_parallel_bench.py  shuffle_mem_probe.py  shuffle_mem_summary.json  single_game_latency_bench.py  throughput_understanding.md  train_microbench.py  train_microbench_summary.json  (+6 more)
configs/: _smoke_optimized_test.toml  dense_cnn_model1.toml  dense_cnn_model1_scratch_64.toml  dense_cnn_model1_target_96x6.toml  dev.yaml  hexformer_ar.toml  main.yaml
models/hexo_resnet/: pyproject.toml
models/hexo_resnet/src/hexo_resnet/: losses.py  model.py  plugin.py
models_common/: pyproject.toml
models_common/src/models_common/: model_api.py  replay.py  rust_bridge.py
python/: pyproject.toml
python/src/hexo_rl/: __init__.py  cli.py  config.py  metrics.py  replay.py  selfplay.py  train.py
runs/: dense_cnn_model1_sealbot_validation.toml
rust/: Cargo.toml
rust/crates/hexo_engine/: Cargo.toml
rust/crates/hexo_engine/src/: lib.rs
rust/crates/hexo_engine/src/game/: board.rs  mod.rs  windows.rs
rust/crates/hexo_models_common/: Cargo.toml
rust/crates/hexo_models_common/src/: encode.rs  lib.rs  pybridge.rs  sample.rs  selfplay.rs
rust/crates/hexo_models_common/src/mcts/: evaluator.rs  search.rs  tree.rs
rust/src/: encode.rs  lib.rs  pybridge.rs  sample.rs  selfplay.rs
rust/src/game/: board.rs  coord.rs  mod.rs  rules.rs  state.rs  threats.rs  win.rs  windows.rs
rust/src/mcts/: evaluator.rs  mod.rs  search.rs  tree.rs
scripts/: bootstrap_dense_cnn_classical.py  goal_benchmark.py  run_model1_wsl_smoke.sh  setup_python_minidumps.ps1  start_model1_training.ps1  supervise_scratch64.ps1  supervise_target_96x6.ps1  watch_model1_resources.ps1  watch_scratch64_autonomy.sh  watch_scratch64_crash.sh
tests/: test_dense_cnn_classical_bootstrap.py  test_dense_cnn_debug_artifacts.py  test_dense_cnn_inference_bucketing.py  test_dense_cnn_performance.py  test_dense_cnn_pipeline.py  test_dense_cnn_replay_schema.py  test_dense_cnn_sample_generation.py  test_frontend_training_artifacts.py  test_hexformer_ar_mcts.py  test_hexformer_ar_model.py  test_hexformer_ar_review_requirements.py  test_hexformer_ar_sample_generation.py  test_hexo_engine_rust_bridge.py  test_hexo_models_architecture.py  test_hexo_models_samples.py  test_hexo_runner_match_mode.py  test_hexo_utils_sample_store.py  test_sealbot_adapter.py  (+1 more)
(+88 files in other folders)
