[workspace]
members = [
    "packages/game_engine",
    "packages/models_common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ahash = { version = "0.8", features = ["serde"] }
game_engine = { path = "packages/game_engine" }
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zstd = "0.13"
