[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "models-common"
version = "0.1.0"
description = "Shared model, inference, replay, and Rust bridge utilities for Hexo models."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "zstandard>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/models_common"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.maturin]
module-name = "models_common_rust"
