[package]
name = "hexo_rl"
version = "0.1.0"
edition = "2021"

[lib]
name = "hexo_rl_rust"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zstd = "0.13"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
