[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hexo-resnet"
version = "0.1.0"
description = "Small PyTorch ResNet model plugin for Hexo RL."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "hexo-rl==0.1.0",
]

[project.entry-points."hexo_rl.models"]
hexo_resnet = "hexo_resnet:get_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/hexo_resnet"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

